--- a/resources/css/components/home.text.css
+++ b/resources/css/components/home.text.css
@@ -1,7 +1,7 @@
 .text-content {
     background: lightgray;
     padding: 1em 3em;
-    margin: 2.5em calc(-1 * var(--gap));
+    margin: 2.5em 0;
 }
 .content-headline {
     padding-bottom: 1.5rem;
@@ -15,6 +15,6 @@
 @media (min-width: 768px) {
     .text-content {
         padding: 2em 6em;
-        margin: 5em calc(-1 * var(--gap));
+        margin: 5em calc(-1 * var(--content-padding));
     }
 }
